--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -1,606 +1,1 @@
-/* normalize.css v2.0.1 | MIT License | git.io/normalize */
-/* ==========================================================================
-   HTML5 display definitions
-   ========================================================================== */
-/*
- * Corrects `block` display not defined in IE 8/9.
- */
-/* line 21, ../sass/partials/_normalize.scss */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-nav,
-section,
-summary {
-  display: block;
-}
-
-/*
- * Corrects `inline-block` display not defined in IE 8/9.
- */
-/* line 31, ../sass/partials/_normalize.scss */
-audio,
-canvas,
-video {
-  display: inline-block;
-}
-
-/*
- * Prevents modern browsers from displaying `audio` without controls.
- * Remove excess height in iOS 5 devices.
- */
-/* line 40, ../sass/partials/_normalize.scss */
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
-/*
- * Addresses styling for `hidden` attribute not present in IE 8/9.
- */
-/* line 49, ../sass/partials/_normalize.scss */
-[hidden] {
-  display: none;
-}
-
-/* ==========================================================================
-   Base
-   ========================================================================== */
-/*
- * 1. Sets default font family to sans-serif.
- * 2. Prevents iOS text size adjust after orientation change, without disabling
- *    user zoom.
- */
-/* line 63, ../sass/partials/_normalize.scss */
-html {
-  font-family: sans-serif;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
-  -ms-text-size-adjust: 100%;
-  /* 2 */
-}
-
-/*
- * Removes default margin.
- */
-/* line 73, ../sass/partials/_normalize.scss */
-body {
-  margin: 0;
-}
-
-/* ==========================================================================
-   Links
-   ========================================================================== */
-/*
- * Addresses `outline` inconsistency between Chrome and other browsers.
- */
-/* line 85, ../sass/partials/_normalize.scss */
-a:focus {
-  outline: thin dotted;
-}
-
-/*
- * Improves readability when focused and also mouse hovered in all browsers.
- */
-/* line 94, ../sass/partials/_normalize.scss */
-a:active,
-a:hover, input {
-  outline: 0;
-}
-
-/* ==========================================================================
-   Typography
-   ========================================================================== */
-/*
- * Addresses `h1` font sizes within `section` and `article` in Firefox 4+,
- * Safari 5, and Chrome.
- */
-/* line 107, ../sass/partials/_normalize.scss */
-h1 {
-  font-size: 2em;
-}
-
-/*
- * Addresses styling not present in IE 8/9, Safari 5, and Chrome.
- */
-/* line 115, ../sass/partials/_normalize.scss */
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-
-/*
- * Addresses style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
- */
-/* line 124, ../sass/partials/_normalize.scss */
-b,
-strong {
-  font-weight: bold;
-}
-
-/*
- * Addresses styling not present in Safari 5 and Chrome.
- */
-/* line 132, ../sass/partials/_normalize.scss */
-dfn {
-  font-style: italic;
-}
-
-/*
- * Addresses styling not present in IE 8/9.
- */
-/* line 140, ../sass/partials/_normalize.scss */
-mark {
-  background: #ff0;
-  color: #000;
-}
-
-/*
- * Corrects font family set oddly in Safari 5 and Chrome.
- */
-/* line 153, ../sass/partials/_normalize.scss */
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, serif;
-  font-size: 1em;
-}
-
-/*
- * Improves readability of pre-formatted text in all browsers.
- */
-/* line 162, ../sass/partials/_normalize.scss */
-pre {
-  white-space: pre;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-}
-
-/*
- * Sets consistent quote types.
- */
-/* line 172, ../sass/partials/_normalize.scss */
-q {
-  quotes: "\201C" "\201D" "\2018" "\2019";
-}
-
-/*
- * Addresses inconsistent and variable font size in all browsers.
- */
-/* line 180, ../sass/partials/_normalize.scss */
-small {
-  font-size: 80%;
-}
-
-/*
- * Prevents `sub` and `sup` affecting `line-height` in all browsers.
- */
-/* line 189, ../sass/partials/_normalize.scss */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-/* line 196, ../sass/partials/_normalize.scss */
-sup {
-  top: -0.5em;
-}
-
-/* line 200, ../sass/partials/_normalize.scss */
-sub {
-  bottom: -0.25em;
-}
-
-/* ==========================================================================
-   Embedded content
-   ========================================================================== */
-/*
- * Removes border when inside `a` element in IE 8/9.
- */
-/* line 212, ../sass/partials/_normalize.scss */
-img {
-  border: 0;
-}
-
-/*
- * Corrects overflow displayed oddly in IE 9.
- */
-/* line 220, ../sass/partials/_normalize.scss */
-svg:not(:root) {
-  overflow: hidden;
-}
-
-/* ==========================================================================
-   Figures
-   ========================================================================== */
-/*
- * Addresses margin not present in IE 8/9 and Safari 5.
- */
-/* line 232, ../sass/partials/_normalize.scss */
-figure {
-  margin: 0;
-}
-
-/* ==========================================================================
-   Forms
-   ========================================================================== */
-/*
- * Define consistent border, margin, and padding.
- */
-/* line 244, ../sass/partials/_normalize.scss */
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-
-/*
- * 1. Corrects color not being inherited in IE 8/9.
- * 2. Remove padding so people aren't caught out if they zero out fieldsets.
- */
-/* line 255, ../sass/partials/_normalize.scss */
-legend {
-  border: 0;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/*
- * 1. Corrects font family not being inherited in all browsers.
- * 2. Corrects font size not being inherited in all browsers.
- * 3. Addresses margins set differently in Firefox 4+, Safari 5, and Chrome
- */
-/* line 269, ../sass/partials/_normalize.scss */
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 2 */
-  margin: 0;
-  /* 3 */
-}
-
-/*
- * Addresses Firefox 4+ setting `line-height` on `input` using `!important` in
- * the UA stylesheet.
- */
-/* line 281, ../sass/partials/_normalize.scss */
-button,
-input {
-  line-height: normal;
-}
-
-/*
- * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *    and `video` controls.
- * 2. Corrects inability to style clickable `input` types in iOS.
- * 3. Improves usability and consistency of cursor style between image-type
- *    `input` and others.
- */
-/* line 296, ../sass/partials/_normalize.scss */
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  /* 2 */
-  cursor: pointer;
-  /* 3 */
-}
-
-/*
- * Re-set default cursor for disabled elements.
- */
-/* line 306, ../sass/partials/_normalize.scss */
-button[disabled],
-input[disabled] {
-  cursor: default;
-}
-
-/*
- * 1. Addresses box sizing set to `content-box` in IE 8/9.
- * 2. Removes excess padding in IE 8/9.
- */
-/* line 316, ../sass/partials/_normalize.scss */
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/*
- * 1. Addresses `appearance` set to `searchfield` in Safari 5 and Chrome.
- * 2. Addresses `box-sizing` set to `border-box` in Safari 5 and Chrome
- *    (include `-moz` to future-proof).
- */
-/* line 327, ../sass/partials/_normalize.scss */
-input[type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  /* 2 */
-  box-sizing: content-box;
-}
-
-/*
- * Removes inner padding and search cancel button in Safari 5 and Chrome
- * on OS X.
- */
-/* line 340, ../sass/partials/_normalize.scss */
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/*
- * Removes inner padding and border in Firefox 4+.
- */
-/* line 349, ../sass/partials/_normalize.scss */
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
-/*
- * 1. Removes default vertical scrollbar in IE 8/9.
- * 2. Improves readability and alignment in all browsers.
- */
-/* line 359, ../sass/partials/_normalize.scss */
-textarea {
-  overflow: auto;
-  /* 1 */
-  vertical-align: top;
-  /* 2 */
-}
-
-/* ==========================================================================
-   Tables
-   ========================================================================== */
-/*
- * Remove most spacing between table cells.
- */
-/* line 372, ../sass/partials/_normalize.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* line 376, ../sass/partials/_normalize.scss */
-h1, h2, h3, h4, h5, h6, hgroup, ul, ol, dl, li, blockquote, p, address, table, fieldset, figure, pre {
-  margin-top: .5em;
-  margin-bottom: 1em;
-}
-
-/*--------------*\
-    $PX to REM
-\*--------------*/
-/*--------------*\
-    $VENDORS
-\*--------------*/
-/*--------------*\
-  $BASE
-\*--------------*/
-/* line 26, ../sass/partials/_fonts.scss */
-.f14, body {
-  font-size: 14px;
-  font-size: 0.875rem;
-}
-
-/* line 4, ../sass/partials/_base.scss */
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-/* line 6, ../sass/partials/_base.scss */
-html {
-  background: white;
-  font-size: 100%;
-  -webkit-overflow-scrolling: touch;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  overflow-y: scroll;
-}
-
-/* line 15, ../sass/partials/_base.scss */
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  background-color: transparent;
-  font-family: "lato", sans-serif;
-  line-height: 1.6;
-  color: black;
-}
-
-/* line 26, ../sass/partials/_base.scss */
-a {
-  color: #10a5eb;
-  text-decoration: none;
-  font-family: "lato", sans-serif;
-  -webkit-transition: all 0.5s ease-in;
-  -moz-transition: all 0.5s ease-in;
-  -o-transition: all 0.5s ease-in;
-  transition: all 0.5s ease-in;
-}
-/* line 33, ../sass/partials/_base.scss */
-a:hover, a:focus, a:active {
-  text-decoration: underline;
-}
-
-/* line 37, ../sass/partials/_base.scss */
-p {
-  margin-top: 0;
-  margin-bottom: 1em;
-}
-
-/* line 41, ../sass/partials/_base.scss */
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-/* line 45, ../sass/partials/_base.scss */
-blockquote {
-  margin-left: 0;
-  padding-left: 1.5em;
-  border-left: 5px solid #10a5eb;
-  opacity: .95;
-}
-/* line 51, ../sass/partials/_base.scss */
-blockquote p:first-child {
-  font-style: italic;
-}
-
-/* line 55, ../sass/partials/_base.scss */
-.menu {
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
-/* line 59, ../sass/partials/_base.scss */
-.btn {
-  border: none;
-  background: #ed5d3b;
-  color: white;
-  font-family: "lato", sans-serif;
-  padding: .5em 1em;
-  line-height: 1;
-}
-
-/* line 67, ../sass/partials/_base.scss */
-.item-list img {
-  vertical-align: baseline;
-}
-
-/*--------------*\
-  $CLEARFIX
-\*--------------*/
-/* line 8, ../sass/partials/_helper.scss */
-.group:before, .grid:before,
-.group:after,
-.grid:after {
-  content: " ";
-  /* 1 */
-  display: table;
-  /* 2 */
-}
-
-/* line 13, ../sass/partials/_helper.scss */
-.group:after, .grid:after {
-  clear: both;
-}
-
-/*--------------*\
-  $TEXT-INDENT
-\*--------------*/
-/* line 23, ../sass/partials/_helper.scss */
-.hide-text {
-  text-indent: -9999px;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-/*--------------*\
-  $FLOAT
-\*--------------*/
-/* line 33, ../sass/partials/_helper.scss */
-.f-right {
-  float: right;
-}
-
-/* line 34, ../sass/partials/_helper.scss */
-.f-left {
-  float: left;
-}
-
-/*--------------*\
-  $PULL
-\*--------------*/
-/* line 40, ../sass/partials/_helper.scss */
-.pull10 {
-  margin-left: -10px;
-}
-
-/* line 41, ../sass/partials/_helper.scss */
-.pull35 {
-  margin-left: -35px;
-}
-
-/*--------------*\
-  $PUSH
-\*--------------*/
-/* line 47, ../sass/partials/_helper.scss */
-.push20 {
-  padding: 0 20px;
-}
-
-/*--------------*\
-  $STATE
-\*--------------*/
-/* line 53, ../sass/partials/_helper.scss */
-.is-visible {
-  display: block !important;
-}
-
-/* line 54, ../sass/partials/_helper.scss */
-.is-hidden {
-  display: none;
-}
-
-/* line 1, ../sass/partials/_grids.scss */
-.grid {
-  list-style: none;
-  margin: 0 0 12 0;
-}
-
-/*--------------*\
-    $1/2
-\*--------------*/
-/*--------------*\
-    $1/3
-\*--------------*/
-/*--------------*\
-    $1/4
-\*--------------*/
-/*--------------*\
-    $1/5
-\*--------------*/
-/*--------------*\
-    $1/6
-\*--------------*/
-/*--------------*\
-    $1/8
-\*--------------*/
-/*--------------*\
-    $1/10
-\*--------------*/
-/* line 1, ../sass/extensions/_header.scss */
-header[role="banner"] {
-  margin: 0;
-  background: #4b4949;
-  width: 100%;
-}
-
-/* line 2, ../sass/extensions/_footer.scss */
-footer[role="contentinfo"] {
-  background: #4b4949;
-}
+/* normalize.css v2.0.1 | MIT License | git.io/normalize */article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block}audio,canvas,video{display:inline-block}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}body{margin:0}a:focus{outline:thin dotted}a:active,a:hover,input{outline:0}h1{font-size:2em}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}mark{background:#ff0;color:#000}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em}pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}q{quotes:"\201C" "\201D" "\2018" "\2019"}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:0}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em}legend{border:0;padding:0}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0}button,input{line-height:normal}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],input[disabled]{cursor:default}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}h1,h2,h3,h4,h5,h6,hgroup,ul,ol,dl,li,blockquote,p,address,table,fieldset,figure,pre{margin-top:.5em;margin-bottom:1em}.f14,body{font-size:14px;font-size:0.875rem}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}html{background:#fff;font-size:100%;-webkit-overflow-scrolling:touch;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;overflow-y:scroll}body{margin:0;padding:0;width:100%;background-color:transparent;font-family:"lato",sans-serif;line-height:1.6;color:#000}a{color:#10a5eb;text-decoration:none;font-family:"lato",sans-serif;-webkit-transition:all 0.5s ease-in;-moz-transition:all 0.5s ease-in;-o-transition:all 0.5s ease-in;transition:all 0.5s ease-in}a:hover,a:focus,a:active{text-decoration:underline}p{margin-top:0;margin-bottom:1em}img{max-width:100%;height:auto}blockquote{margin-left:0;padding-left:1.5em;border-left:5px solid #10a5eb;opacity:.95}blockquote p:first-child{font-style:italic}.menu{padding:0 !important;margin:0 !important}.btn{border:none;background:#ed5d3b;color:#fff;font-family:"lato",sans-serif;padding:.5em 1em;line-height:1}.item-list img{vertical-align:baseline}.group:before,.grid:before,.group:after,.grid:after{content:" ";display:table}.group:after,.grid:after{clear:both}.hide-text{text-indent:-9999px;white-space:nowrap;overflow:hidden}.f-right{float:right}.f-left{float:left}.pull10{margin-left:-10px}.pull35{margin-left:-35px}.push20{padding:0 20px}.is-visible{display:block !important}.is-hidden{display:none}.grid{list-style:none;margin:0 0 12 0}header[role="banner"]{margin:0;background:#4b4949;width:100%}footer[role="contentinfo"]{background:#4b4949;margin:0px;width:100%}
