--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -672,6 +672,10 @@ blockquote p:first-child {
   display: none;
 }
 
+.breadcrumb {
+  display: none;
+}
+
 .front .banner p {
   text-transform: uppercase;
   background: #18beff;
