--- a/sites/all/themes/drupalkashmir/sass/sections/_header.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_header.scss
@@ -3,11 +3,19 @@ header[role="banner"] {
 }
 
 .navbar {
-    @extend %group; 
+    @extend %group;
+    @include background(linear-gradient(#F8756A, #CC2317));
+    @include box-shadow(inset 0 1px 0 rgba(white, 0.36));
+    position: relative;
+    height: 42px;
+    border-top: 1px solid #F8756A;
 }
+
 .navbar__logo {
     @extend %one-half;
     @extend %f-left;
+    position: absolute;
+    opacity: .85;
 }
 
 .navbar__menu--button {
@@ -19,6 +27,11 @@ header[role="banner"] {
         @extend %is-inline-block;
         @include font-size(24);
         cursor: pointer;
+        line-height: 42px;
+        color: #FFF;
+        text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
+        width: 2em;
+        text-align: center;
     }
 }
 
@@ -63,3 +76,7 @@ nav[role="navigation"] {
     @extend %f-right;
     margin: 0;
 }
+
+
+
+
